infrastructure/envoy-gateway/templates/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-server-route
  namespace: monitoring
  labels:
    app.kubernetes.io/part-of: fitforge
    app.kubernetes.io/component: ingress
spec:
  parentRefs:
    - name: fitforge-gateway
      namespace: fitforge-prod
  hostnames:
    - grafana.fitforge360.in
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
